--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -159,7 +159,7 @@
     <string name="developer_settings">Paramètres pour développeurs</string>
     <string name="migration">Migration</string>
     <string name="set_a_password_for_your_daily_backup">Définissez un mot de passe pour votre sauvegarde quotidienne</string>
-    <string name="set_a_password_used_to_encrypt_your_daily_backup_that_is_written_to_external_storage">Définissez un mot de passe utilisé pour crypter votre sauvegarde quotidienne écrite sur le stockage externe.</string>
+    <string name="set_a_password_used_to_encrypt_your_daily_backup_that_is_written_to_external_storage">Définissez un mot de passe utilisé pour chiffrer votre sauvegarde quotidienne écrite sur le stockage externe.</string>
     <string name="backup_password">Mot de passe de la sauvegarde</string>
     <string name="restore_from_automatic_backup">Restaurer à partir de la sauvegarde automatique</string>
     <string name="it_appears_an_automatic_backup_exists_on_your_device_if_you_would_like_to_restore_enter_your_backup_password">Il semble qu\'une sauvegarde automatique existe sur votre appareil, si vous souhaitez restaurer, entrez votre mot de passe de sauvegarde.</string>
